# pyfdb-query

./: LICENSE  README.md  example.py  pyproject.toml
pyfdb_query/: __init__.py  config.py  core.py  crud.py  database.py  handle.py  interface.py
pyfdb_query/utils/: __init__.py  serialize.py
